--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     <h2>7. 변경사항</h2>
     <p>본 개인정보처리방침은 2025년 1월 5일부터 적용됩니다.</p>
     <p>정책 변경 시 앱 내 공지를 통해 안내드리겠습니다.</p>
+
+    <h2>8. 데이터 출처</h2>
+    <p>본 앱은 대한민국 정부 공식 앱이 아닙니다.</p>
+    <p>본 앱은 대한민국 국회에서 제공하는 공개 API를 사용합니다.</p>
+    <p>열린국회정보 Open API : https://open.assembly.go.kr/</p>
     
     <hr>
     <p><em>최종 수정일: 2025년 1월 5일</em></p>
